cart product component

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,3 +1,4 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
 @import "bootstrap-vue-next/dist/bootstrap-vue-next.css";
 
+@import "vue-select/dist/vue-select.css";
